--- a/render.yaml
+++ b/render.yaml
@@ -3,4 +3,4 @@
 services:
   - name: web
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn -b 0.0.0.0:$PORT app:app
+    startCommand: gunicorn==20.1.0 -b 0.0.0.0:$PORT app:app
